--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "check-types": "tsc --noEmit --incremental",
-    "dev": "next dev",
+    "dev": "node ./scripts/dev-script.js",
     "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
     "lint": "next lint",
     "serve": "next start",
@@ -15,12 +15,22 @@
   },
   "dependencies": {
     "@ethersproject/providers": "~5.7.2",
+    "@farcaster/core": "^0.14.3",
     "@heroicons/react": "~2.0.11",
+    "@livepeer/react": "^4.1.11",
+    "@noble/ed25519": "^2.0.0",
+    "@pinata/sdk": "2.1.0",
     "@rainbow-me/rainbowkit": "1.3.5",
     "@uniswap/sdk-core": "~4.0.1",
     "@uniswap/v2-sdk": "~3.0.1",
+    "@vercel/kv": "^1.0.1",
+    "@xmtp/frames-validator": "^0.5.0",
     "blo": "~1.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "daisyui": "4.5.0",
+    "frames.js": "^0.8.4",
+    "livepeer": "^3.0.2",
     "next": "~14.0.4",
     "next-themes": "~0.2.1",
     "nprogress": "~0.2.0",
@@ -29,13 +39,17 @@
     "react-copy-to-clipboard": "~5.1.0",
     "react-dom": "~18.2.0",
     "react-hot-toast": "~2.4.0",
+    "sonner": "1.4.41",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "~8.0.4",
     "usehooks-ts": "2.13.0",
     "viem": "1.19.9",
     "wagmi": "1.4.12",
+    "zod": "3.22.4",
     "zustand": "~4.1.2"
   },
   "devDependencies": {
+    "@frames.js/debugger": "^0.1.6",
     "@trivago/prettier-plugin-sort-imports": "~4.1.1",
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0",
@@ -43,6 +57,8 @@
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "~5.40.0",
     "autoprefixer": "~10.4.12",
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "eslint": "~8.24.0",
     "eslint-config-next": "~14.0.4",
     "eslint-config-prettier": "~8.5.0",
