--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "apt-get install ffmpeg && yarn install --frozen-lockfile",
+  "installCommand": "apt install ffmpeg && yarn install --frozen-lockfile",
   "buildCommand": "yarn next:build",
   "outputDirectory": "packages/nextjs/.next",
   "framework": "nextjs"
